unpackaged/main/default/objects/T1_OAuth_Token__c/T1_OAuth_Token__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>T1 OAuth Token</label>
</CustomObject>