unpackaged/main/default/objects/T1_OAuth_Token__c/fields/error__c.field-meta.xml
<CustomField>
    <fullName>error__c</fullName>
    <label>error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>