unpackaged/main/default/objects/T1_OAuth_Token__c/fields/error_description__c.field-meta.xml
<CustomField>
    <fullName>error_description__c</fullName>
    <label>error description</label>
    <type>TextArea</type>
</CustomField>