unpackaged/main/default/objects/T1_OAuth_Token__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <label>Expiry</label>
    <type>DateTime</type>
</CustomField>